--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,12 @@
 GITHUB_CLIENT_ID=your_client_id_here
 GITHUB_CLIENT_SECRET=your_client_secret_here
 
-# Your GitHub username and repo name
-GITHUB_REPO_OWNER=yourusername
+# Main LeetBuddy repository (for contributions)
+GITHUB_REPO_OWNER=melo-maniac-29
 GITHUB_REPO_NAME=leet-buddy
+
+# ⚠️ OPTIONAL: Personal Access Token for backend PR creation
+# NOT needed for normal users! Users create PRs with their own OAuth tokens.
+# Only set this if you're the admin and want backend API to create PRs.
+# For open-source projects, users should create PRs via extension (secure!).
+# GITHUB_ACCESS_TOKEN=your_personal_access_token_here
