--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,9 @@ services:
       DATABASE_URL: postgresql://leetbuddy_user:leetbuddy_pass_2026@postgres:5432/leetbuddy
       GITHUB_CLIENT_ID: ${GITHUB_CLIENT_ID}
       GITHUB_CLIENT_SECRET: ${GITHUB_CLIENT_SECRET}
-      GITHUB_REPO_OWNER: ${GITHUB_REPO_OWNER}
-      GITHUB_REPO_NAME: ${GITHUB_REPO_NAME}
+      GITHUB_REPO_OWNER: ${GITHUB_REPO_OWNER:-melo-maniac-29}
+      GITHUB_REPO_NAME: ${GITHUB_REPO_NAME:-leet-buddy}
+      GITHUB_ACCESS_TOKEN: ${GITHUB_ACCESS_TOKEN}
     depends_on:
       postgres:
         condition: service_healthy
