--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,5 +40,16 @@ services:
       - ./api:/app
       - ./processed-data:/data
 
+  adminer:
+    image: adminer:latest
+    container_name: leetbuddy-adminer
+    restart: unless-stopped
+    ports:
+      - "8082:8080"
+    environment:
+      ADMINER_DEFAULT_SERVER: postgres
+    depends_on:
+      - postgres
+
 volumes:
   postgres_data:
