--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,7 +7,18 @@
   
   "action": {
     "default_popup": "popup/popup.html",
-    "default_title": "LeetBuddy"
+    "default_title": "LeetBuddy",
+    "default_icon": {
+      "16": "assets/icon-16.png",
+      "48": "assets/icon-48.png",
+      "128": "assets/icon-128.png"
+    }
+  },
+  
+  "icons": {
+    "16": "assets/icon-16.png",
+    "48": "assets/icon-48.png",
+    "128": "assets/icon-128.png"
   },
   
   "background": {
